--- a/02Lab_Part1_DataStructures.Rmd
+++ b/02Lab_Part1_DataStructures.Rmd
@@ -83,16 +83,16 @@ Find a 5-day forecast of temperatures (Fahrenheit) for Durham, North Carolina. C
 ```{r Vector Exercise}
 
 #Assign to the variable 'temps_F' a vector of high temperatures in F
-
+temps_F <- c(55,52,30,27,33,38,40,32,32,32)
 
 #What is the average of these temperatures 
-
+mean(temps_F) #37.1
 
 #Compute the difference between each temperature and the average calculated above
-
+temp_diff <- temps_F - 37.1
 
 #Subtract 32 and multiply by 5/9ths to create a vector in Celsius
-
+temp_c <- (temps_F - 32)*5/9
 
 ```
 
@@ -127,15 +127,15 @@ matrix3
 Add comments in the code chunk below to indicate type of vectors created and what each operation does.
 ```{r Matrix Operations}
 
-matrix1[4, 1] #
+matrix1[4, 1] #provides specific value 104
 
-matrix1[4,  ] #
+matrix1[4,  ] #provides all values in row 4
 
-matrix1[ , 3] #
+matrix1[ , 3] #provides all values in column C
 
 matrix1[c(12, 14)] #
 
-matrix1[c(12:14)] #
+matrix1[c(12:14)] #colon gives a slice 
 
 matrix1[2:4, 1:3] #
 
@@ -164,7 +164,7 @@ matrix4['R2','C1']
 ### Exercise 1b: Matrices
 Compute the mean of column "C2" in matrix4. (Should be 14.5)
 ```{r Matrix Exercise}
-
+mean(matrix4[ ,"C2"])
 ```
 
 
