--- a/BriannaKarson_A02_CodingBasics.Rmd
+++ b/BriannaKarson_A02_CodingBasics.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Assignment 2: Coding Basics"
-author: "Student Name"
+author: "Brianna Karson"
 output: pdf_document
 geometry: margin=2.54cm
 editor_options: 
@@ -20,7 +20,7 @@ This exercise accompanies the lessons/labs in Environmental Data Analytics on co
 5.  When you have completed the assignment, **Knit** the text and code into a single PDF file.
 6.  After Knitting, submit the completed exercise (PDF file) to Canvas.
 
-7.  Initial here to acknowledge that you did not use AI at all in completing this assignment: ___
+7.  Initial here to acknowledge that you did not use AI at all in completing this assignment: BK
 
 
 ## Basics, Part 1
@@ -36,13 +36,22 @@ This exercise accompanies the lessons/labs in Environmental Data Analytics on co
 5.  Insert comments in your code to describe what you are doing.
 
 ```{r basics 1}
-#1. 
+#1. #sequence function
+three_sequence <- seq(100,333,3) 
 
-#2. 
+#2. #generating mean
+mean_three_sequence <- mean(three_sequence) 
+mean(three_sequence) 
 
-#3. 
+#3. #computing standard deviation
+st_dev_three_sequence <- sd(three_sequence)
+sd(three_sequence)
 
 #4.
+#calculating mean minus st dev
+mean_three_sequence - st_dev_three_sequence 
+#calculating mean plus st dev
+mean_three_sequence + st_dev_three_sequence 
 
 ```
 
@@ -58,13 +67,24 @@ This exercise accompanies the lessons/labs in Environmental Data Analytics on co
 9.  Label the columns of your data frame with informative titles.
 
 ```{r basics 2}
+#6. 
+#making vectors
+vectorA_names <- c("Matthew","Mark","Luke","John") #character vector
 
+vectorB_scores <- c(100,96,98,94) #numeric vector
+
+vectorC_scholarship <- c(TRUE, FALSE, TRUE, FALSE) #logical vector
+
+#making a data frame
+student_data <- data.frame("name"=vectorA_names,"score"=vectorB_scores,
+                           "scholarship"=vectorC_scholarship)
 
 ```
 
 10.  QUESTION: How is this data frame different from a matrix?
 
 > Answer:
+Matrices and data frames are both two-dimensional, but a matrix can only contain one type of data. As seen above, a data frame may contain many different types of data, and each column is a named vector. 
 
 ---
 
@@ -80,21 +100,28 @@ This exercise accompanies the lessons/labs in Environmental Data Analytics on co
 
 ```{r basics 3}
 #11. Create a function using if...else
+function_11 <- function(x) { if (x>50) {"PASS"} else {"FAIL"} }
 
 #12. Create a function using ifelse()
+function_12 <- function(x){ifelse(x>50,"PASS","FAIL")}
 
 #13a. Run the first function with the value 54
+function_11(54) #"PASS"
 
 #13b. Run the second function with the value 54
+function_12(54) #"PASS"
 
 #14a. Run the first function with the vector of test scores
+#function_11(vectorB_scores) #did not work
 
 #14b. Run the second function with the vector of test scores
+function_12(vectorB_scores) # worked
 ```
 
 15. QUESTION: Which option of `if`...`else` vs. `ifelse` worked? Why? (Hint: search the web for "R vectorization"; it's ok here if an AI response is presented in the search response.)
 
 > Answer:
+'if...else' did not work because this is not a vectorized function, meaning that it can only be applied to one value at a time. 'ifelse' worked because it is a vectorized function and therefore can be applied to evaluate the entire scores vector at once.
 
 
 **NOTE** Before knitting, you'll need to comment out the call to the function in Q14 that does not work. (A document can't knit if the code it contains causes an error!)
