in person lab lesson commit

--- a/Lessons/03Lab_b_Exercises.Rmd
+++ b/Lessons/03Lab_b_Exercises.Rmd
@@ -21,7 +21,7 @@ here()
 
 #Import data
 pm25 <- read.csv(
-  #----ENTER THE FILENAME HERE, USING THE here() PACKAGE----
+  file = here("./Data/Raw/EPAair_PM25_NC2019_raw.csv"),
   stringsAsFactors = TRUE,
   colClasses = c("Site.ID"='factor')
 )
