data wrangling lessons commit after lecture

--- a/Lessons/04Lab_DataWrangling.Rmd
+++ b/Lessons/04Lab_DataWrangling.Rmd
@@ -34,13 +34,14 @@ NTL.phys.data <- read.csv(
 )
 
 #Show the datatype of the 'sampledate' column
-str(NTL.phys.data$sampledate)
+str(NTL.phys.data$sampledate) #factor
 
 #Alternatively, use the tidyverse/dplyr "glimpse" function
-glimpse(NTL.phys.data$sampledate)
+glimpse(NTL.phys.data$sampledate) #exact same output
 
 # Change sampledate values into date objects
-NTL.phys.data$sampledate <- mdy(NTL.phys.data$sampledate)
+NTL.phys.data$sampledate <- mdy(NTL.phys.data$sampledate) 
+#always convert date in the same chunk as you read your data set
 ```
 
 ---
@@ -58,8 +59,8 @@ Enter these filter expressions below
 
 ```{r filter data}
 # note the data types of these two columns
-class(NTL.phys.data$lakeid)
-class(NTL.phys.data$depth)
+class(NTL.phys.data$lakeid) #factor
+class(NTL.phys.data$depth) #numeric
 
 # dplyr filtering 
 NTL.phys.data.surface <- filter(NTL.phys.data, depth == 0) 
@@ -71,23 +72,29 @@ NTL.phys.data.PeterPaul <-
 
 # Choose a range of conditions of a numeric or integer variable
 summary(NTL.phys.data$daynum)
-NTL.phys.data.JunethruOctober <- filter(NTL.phys.data, daynum %in% c(152:304))
+NTL.phys.data.JunethruOctober <- filter(NTL.phys.data, daynum %in% c(152:304)) 
+#c does not denote "condition" it is simply vector notation
 ```
 
 ```{r Exercise 1 & 2}
 # Exercise 1: 
 # filter NTL.phys.data for the year 1999
 # what code do you need to use, based on the class of the variable?
-
+summary(NTL.phys.data$yearnum)
+NTL.phys.data.1999 <- filter(NTL.phys.data, year4 == 1999)
 
 # Exercise 2: 
 # filter NTL.phys.data for Tuesday Lake from 1990 through 1999.
-
+NTL.phys.data.1990.99 <- filter(
+  NTL.phys.data, 
+  lakename == 'Tuesday Lake' &
+    year4 %in% c (1990:1999)
+)
 
 ```
 Question: Why don't we filter using row numbers?
 
-> Answer: 
+> Answer: The row numbers are internal indexes. 
 
 ---
 
@@ -102,9 +109,9 @@ Let's say we want to take our raw dataset (NTL.phys.data), *then* filter the dat
 #Example using pipes to wrangle data: 
 #Add pipes in the correct place below
 NTL.phys.data.processed <- 
-  NTL.phys.data
-  filter(lakename == "Paul Lake" | lakename == "Peter Lake") 
-  select(lakename, sampledate:temperature_C) 
+  NTL.phys.data %>%
+  filter(lakename == "Paul Lake" | lakename == "Peter Lake") %>%
+  select(lakename, sampledate:temperature_C) %>%
   mutate(temperature_F = (temperature_C*9/5) + 32)
 
 #Exercise 3: Using a pipe filter NTL.phys.data for Tuesday Lake from 1990 
@@ -119,6 +126,14 @@ NTL.phys.data.processed <-
   
 ```
 
+```{r}
+demo <- NTL.phys.data %>%
+  filter(depth == 0) %>%
+  group_by(year4) %>%
+  summarise(
+    meanT = mean(temperature_C) 
+  )
+```
 
 
 ## Gather and Spread
@@ -130,12 +145,21 @@ For gather we will use `pivot_longer` and for spread we will use `pivot_wider`.
 #  on the deck of the sampling boat) into one column using pivot_longer. Name
 #  the new column holding the irradiance type as "Irradiance_Type", and name the
 #  new column holding the irradiance values as "Irradiance_Value".
+NTL.phys.data.gathered.irradiance <- pivot_longer(NTL.phys.data, irradianceWater:irradianceDeck,
+                                                  names_to = "Irradiance Type", 
+                                                  values_to = "Irradiance Value")
 
 
 
 #Exercise 6: Spread temperatureC into more than one column based on the depth.
-
-
+ex6 <- pivot_wider(
+  NTL.phys.data,
+  names_from = depth,
+  values_from = temperature_C
+)
+  
+                          
+ 
 
 ```
 
